# free-churro-scheduler

./: .gitignore  Cargo.toml  README.md  flake.nix
db/migrations/: 20240620_init.sql
src/: cmds.rs  database.rs  ext.rs  main.rs  supervisor.rs  task.rs  test_utils.rs  worker.rs
src/cmds/: init.rs  supervise.rs  work.rs
src/cmds/work/: http.rs
src/cmds/work/http/: endpoints.rs
src/cmds/work/http/endpoints/: create_task.rs  delete_task.rs  get_task.rs  get_tasks.rs
src/supervisor/: listener.rs  notification.rs  tasks.rs  workers.rs
src/worker/: id.rs  listener.rs  notification.rs  status.rs  watchdog.rs
